# s4nnc

./: .bazelrc  .gitignore  Package.swift  README.md  WORKLOG.md  WORKSPACE  deps.bzl
.github/workflows/: documentation.yaml  ubuntu-bazel.yaml
docs/: index.html  metadata.json
docs/data/documentation/: gym.json  nnc.json  nncmujococonversion.json  nncpythonconversion.json  tensorboard.json
docs/data/documentation/gym/: ant.json  collecteddata.json  collector.json  env.json  halfcheetah.json  hopper.json  httprenderprovider.json  httprenderserver.json  humanoid.json  inverteddoublependulum.json  invertedpendulum.json  mujocoenv.json  mujocoviewer.json  numericalstatistics.json  ppo.json  renderable.json  runningmeanstd.json  sfmt.json  swimmer.json  timelimit.json  vecenv.json  walker2d.json
docs/data/documentation/gym/ant/: actionspace.json  acttype.json  data.json  env-implementations.json  init(ctrlcostweight:healthyreward:terminatewhenunhealthy:healthyzrange:resetnoisescale:).json  model.json  obstype.json  reset().json  reset(seed:).json  rewardthreshold.json  rewardtype.json  statesize.json  step(action:).json  terminatedtype.json
docs/data/documentation/gym/collecteddata/: acttype.json  envstate-swift.enum.json  envstate-swift.property.json  episodelength.json  episodereward.json  init(lastobservation:).json  lastobservation.json  obstype.json  rewards.json  states.json
docs/data/documentation/gym/collector/: acttype.json  collect(nstep:).json  data.json  init(envs:policy:).json  obstype.json  reset().json  resetdata(keeplastn:).json  statistics.json
docs/data/documentation/gym/env/: actionspace.json  acttype.json  obstype.json  reset().json  reset(seed:).json  rewardthreshold.json  rewardtype.json  statesize.json  step(action:).json  terminatedtype.json
docs/data/documentation/gym/halfcheetah/: actionspace.json  acttype.json  data.json  env-implementations.json  init(forwardrewardweight:ctrlcostweight:resetnoisescale:).json  model.json  obstype.json  reset().json  reset(seed:).json  rewardthreshold.json  rewardtype.json  statesize.json  step(action:).json  terminatedtype.json
docs/data/documentation/gym/hopper/: actionspace.json  acttype.json  data.json  env-implementations.json  model.json  obstype.json  reset().json  reset(seed:).json  rewardthreshold.json  rewardtype.json  statesize.json  (+3 more)
docs/data/documentation/nnc/: '.*(_:_:)-6q4of.json  '.*(_:_:)-8v4jq.json  '.+(_:_:)-5y93t.json  '.+(_:_:)-735dv.json  '._(_:_:)-14vkn.json  '._(_:_:)-15mdn.json  (_:_:)-10m8a.json  (_:_:)-14vkn.json  (_:_:)-15mdn.json  (_:_:)-2gh35.json  (_:_:)-2s535.json  (_:_:)-3041l.json  *(_:_:)-1r7nx.json  *(_:_:)-3y9q9.json  *(_:_:)-6342.json  *(_:_:)-728sb.json  *(_:_:)-8e51t.json  *(_:_:)-8k1wm.json  +(_:_:)-1sprp.json  +(_:_:)-3qwjd.json  +(_:_:)-5p5sb.json  +(_:_:)-5pqdd.json  +(_:_:)-5yi76.json  +(_:_:)-6f478.json  +(_:_:)-6k6fm.json  +(_:_:)-dwwt.json  -(_:)-5yilj.json  -(_:)-6nifs.json  -(_:_:)-26s7l.json  -(_:_:)-321ox.json  -(_:_:)-42ziz.json  -(_:_:)-4zkis.json  -(_:_:)-5j9kr.json  -(_:_:)-6zoz6.json  -(_:_:)-9qxpb.json  -(_:_:)-j8hw.json  _(_:_:)-10m8a.json  _(_:_:)-2gh35.json  _(_:_:)-2s535.json  _(_:_:)-3041l.json  (+123 more)
docs/data/documentation/tensorboard/: summarywriter.json
docs/index/: availability.index  data.mdb  index.json  navigator.index
examples/: BUILD.bazel  main.swift
examples/cifar-10/: main.swift
examples/ddpg/: main.swift
examples/dqn/: main.swift
examples/gym/: OSShim.swift  main.swift
examples/gym/envs/: Ant.swift  Env.swift  MuJoCoEnv.swift  TimeLimit.swift  VecEnv.swift
examples/gym/renders/: MuJoCoViewer.swift  Renderable.swift
examples/imdb/: main.swift
examples/minrf/: main.swift
examples/pandas/: main.swift
examples/ppo/: main.swift  python.swift
examples/py_sf_ppo/: main.swift
examples/random/: main.swift
examples/sac/: main.swift
examples/td3/: main.swift
gym/: BUILD.bazel  Collector.swift  NumericalStatistics.swift  RunningMeanStd.swift
gym/envs/: Ant.swift  Env.swift  HalfCheetah.swift  Hopper.swift  Humanoid.swift  InvertedDoublePendulum.swift  InvertedPendulum.swift  Noise.swift  Swimmer.swift  TimeLimit.swift  VecEnv.swift  Walker2D.swift
gym/http/: HTTP.swift
gym/policies/: PPO.swift
gym/renders/: MuJoCoVideo.swift  MuJoCoViewer.swift  ffmpeg_shim.c  ffmpeg_shim.h
nnc/: AnyModel.swift  AutoGrad.swift  BUILD.bazel  CoreMLConversion.swift  DataFrame.swift  DataFrameAddons.swift  DataFrameCore.swift  DynamicGraph.swift  Functional.swift  FunctionalAddons.swift  GradScaler.swift  Group.swift  Hint.swift  Loss.swift  Model.swift  ModelAddons.swift  ModelBuilder.swift  ModelCore.swift  ModelIOAddons.swift  MuJoCoConversion.swift  Operators.swift  Optimizer.swift  OptimizerAddons.swift  PythonConversion.swift  Store.swift  StreamContext.swift  Tensor.swift  TensorGroup.swift  Wrapped.swift
nnc/C_nnc/: shim.h
nnc/C_sfmt/: shim.h
nnc/C_zlib/: module.modulemap
scripts/: BUILD.bazel  docc.sh
scripts/vscode/: build.sh
tensorboard/: BUILD.bazel  EventLogger.swift  README.md  SummaryWriter+NNC.swift  SummaryWriter.swift  Support.swift
tensorboard/proto-generated/: allocation_description.pb.swift  api_def.pb.swift  attr_value.pb.swift  cluster.pb.swift  config.pb.swift  coordination_config.pb.swift  cost_graph.pb.swift  cpp_shape_inference.pb.swift  debug.pb.swift  event.pb.swift  full_type.pb.swift  function.pb.swift  graph.pb.swift  meta_graph.pb.swift  node_def.pb.swift  op_def.pb.swift  resource_handle.pb.swift  rewriter_config.pb.swift  saved_object_graph.pb.swift  saver.pb.swift  step_stats.pb.swift  struct.pb.swift  summary.pb.swift  tensor.pb.swift  tensor_description.pb.swift  tensor_shape.pb.swift  tfprof_log.pb.swift  trackable_object_graph.pb.swift  types.pb.swift  variable.pb.swift  verifier_config.pb.swift  versions.pb.swift
test/: BUILD.bazel  dataframe.swift  graph.swift  loss.swift  main.swift  model.swift  ops.swift  optimizer.swift  some_variables.db  store.swift  tensor.swift
test/coreml/: main.swift  mlshapedarray.swift
test/python/: main.swift  numpy.swift
(+2197 files in other folders)
