load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary")

swift_binary(
    name = "imdb",
    srcs = ["imdb/main.swift"],
    deps = [
        "//nnc",
    ],
)

swift_binary(
    name = "cifar-10",
    srcs = ["cifar-10/main.swift"],
    deps = [
        "//nnc",
    ],
)

swift_binary(
    name = "pandas",
    srcs = ["pandas/main.swift"],
    deps = [
        "//nnc",
        "@PythonKit",
    ],
)

swift_binary(
    name = "dqn",
    srcs = ["dqn/main.swift"],
    deps = [
        "//nnc",
        "//nnc:nnc_python",
        "@PythonKit",
        "@SwiftAlgorithms//:Algorithms",
    ],
)

swift_binary(
    name = "ddpg",
    srcs = ["ddpg/main.swift"],
    deps = [
        "//nnc",
        "//nnc:nnc_python",
        "@PythonKit",
        "@SwiftAlgorithms//:Algorithms",
    ],
)
