load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary", "swift_library")

swift_library(
    name = "gym",
    srcs = glob(["gym/**/*.swift"]),
    deps = [
        "//nnc",
        "@swift-mujoco//:swift-mujoco",
    ],
)

swift_binary(
    name = "imdb",
    srcs = ["imdb/main.swift"],
    deps = [
        "//nnc",
    ],
)

swift_binary(
    name = "cifar-10",
    srcs = ["cifar-10/main.swift"],
    deps = [
        "//nnc",
    ],
)

swift_binary(
    name = "pandas",
    srcs = ["pandas/main.swift"],
    deps = [
        "//nnc",
        "@PythonKit",
    ],
)

swift_binary(
    name = "dqn",
    srcs = ["dqn/main.swift"],
    deps = [
        "//nnc",
        "//nnc:nnc_python",
        "@PythonKit",
        "@SwiftAlgorithms//:Algorithms",
    ],
)

swift_binary(
    name = "ddpg",
    srcs = ["ddpg/main.swift"],
    deps = [
        "//nnc",
        "//nnc:nnc_python",
        "@PythonKit",
        "@SwiftAlgorithms//:Algorithms",
        "@SwiftNumerics//:Numerics",
    ],
)

swift_binary(
    name = "td3",
    srcs = ["td3/main.swift"],
    deps = [
        "//nnc",
        "//nnc:nnc_python",
        "@PythonKit",
        "@SwiftAlgorithms//:Algorithms",
        "@SwiftNumerics//:Numerics",
    ],
)

swift_binary(
    name = "ppo",
    srcs = ["ppo/main.swift"],
    deps = [
        ":gym",
        "//nnc",
        "//nnc:nnc_python",
        "@PythonKit",
        "@SwiftAlgorithms//:Algorithms",
        "@SwiftNumerics//:Numerics",
    ],
)
