load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary")

swift_binary(
    name = "imdb",
    srcs = ["imdb/main.swift"],
    deps = [
        "//nnc",
    ],
)

swift_binary(
    name = "cifar-10",
    srcs = ["cifar-10/main.swift"],
    deps = [
        "//nnc",
    ],
)

swift_binary(
    name = "pandas",
    srcs = ["pandas/main.swift"],
    deps = [
        "//nnc",
        "@PythonKit",
    ],
)

swift_binary(
    name = "dqn",
    srcs = ["dqn/main.swift"],
    deps = [
        "//nnc",
        "//nnc:nnc_python",
        "@PythonKit",
        "@SwiftAlgorithms//:Algorithms",
    ],
)

swift_binary(
    name = "ddpg",
    srcs = ["ddpg/main.swift"],
    deps = [
        "//nnc",
        "//nnc:nnc_python",
        "@PythonKit",
        "@SwiftAlgorithms//:Algorithms",
        "@SwiftNumerics//:Numerics",
    ],
)

swift_binary(
    name = "td3",
    srcs = ["td3/main.swift"],
    deps = [
        "//nnc",
        "//nnc:nnc_python",
        "@PythonKit",
        "@SwiftAlgorithms//:Algorithms",
        "@SwiftNumerics//:Numerics",
    ],
)

swift_binary(
    name = "ppo",
    srcs = ["ppo/main.swift"],
    deps = [
        "//gym",
        "//nnc",
        "//nnc:nnc_python",
        "//tensorboard",
        "@PythonKit",
        "@SwiftAlgorithms//:Algorithms",
        "@SwiftNumerics//:Numerics",
    ],
)

swift_binary(
    name = "py_sf_ppo",  # Python, Single-File, PPO. This is kept as is to check against any changes in PPO.
    srcs = ["py_sf_ppo/main.swift"],
    deps = [
        "//gym",
        "//nnc",
        "//nnc:nnc_python",
        "@PythonKit",
        "@SwiftAlgorithms//:Algorithms",
        "@SwiftNumerics//:Numerics",
    ],
)

swift_binary(
    name = "sac",
    srcs = ["sac/main.swift"],
    deps = [
        "//gym",
        "//nnc",
        "//nnc:nnc_python",
        "@PythonKit",
        "@SwiftAlgorithms//:Algorithms",
        "@SwiftNumerics//:Numerics",
    ],
)

swift_binary(
    name = "random",
    srcs = ["random/main.swift"],
    deps = [
        "//gym",
        "//gym:gym_video",
        "//nnc",
        "//nnc:nnc_python",
        "//tensorboard",
        "@PythonKit",
        "@SwiftAlgorithms//:Algorithms",
        "@SwiftNumerics//:Numerics",
    ],
)
