load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "gym",
    srcs = glob(["**/*.swift"]),
    data = glob(["assets/*.xml"]),
    module_name = "Gym",
    visibility = ["//visibility:public"],
    deps = [
        "//nnc",
        "//nnc:nnc_mujoco",
        "@SwiftAlgorithms//:Algorithms",
        "@SwiftNIO//:NIOConcurrencyHelpers",
        "@SwiftNIO//:NIOCore",
        "@SwiftNIO//:NIOHTTP1",
        "@SwiftNIO//:NIOPosix",
        "@SwiftNIO//:NIOWebSocket",
        "@SwiftNumerics//:Numerics",
        "@ccv//lib:SFMT",
        "@ccv//lib:ccv",
        "@swift-jupyter//:JupyterDisplay",
        "@swift-mujoco//:swift-mujoco",
    ],
)
