load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

cc_library(
    name = "C_zlib",
    hdrs = ["C_zlib/shim.h"],
    defines = ["_GNU_SOURCE"],
    linkopts = ["-lz"],
    tags = ["swift_module=C_zlib"],
)

swift_library(
    name = "nnc",
    srcs = [
        "AnyModel.swift",
        "AutoGrad.swift",
        "DataFrame.swift",
        "DataFrameAddons.swift",
        "DataFrameCore.swift",
        "DynamicGraph.swift",
        "Functional.swift",
        "FunctionalAddons.swift",
        "GradScaler.swift",
        "Group.swift",
        "Hint.swift",
        "Loss.swift",
        "Model.swift",
        "ModelAddons.swift",
        "ModelBuilder.swift",
        "ModelCore.swift",
        "ModelIOAddons.swift",
        "Operators.swift",
        "Optimizer.swift",
        "OptimizerAddons.swift",
        "Store.swift",
        "StreamContext.swift",
        "Tensor.swift",
        "TensorGroup.swift",
        "Wrapped.swift",
    ],
    module_name = "NNC",
    visibility = ["//visibility:public"],
    deps = [
        ":C_zlib",
        "@ccv//lib:ccv",
        "@ccv//lib:nnc",
        "@fpzip",
    ],
)

swift_library(
    name = "nnc_python",
    srcs = [
        "PythonConversion.swift",
    ],
    module_name = "NNCPythonConversion",
    visibility = ["//visibility:public"],
    deps = [
        ":nnc",
        "@PythonKit",
    ],
)

swift_library(
    name = "nnc_mujoco",
    srcs = [
        "MuJoCoConversion.swift",
    ],
    module_name = "NNCMuJoCoConversion",
    visibility = ["//visibility:public"],
    deps = [
        ":nnc",
        "@swift-mujoco",
    ],
)

swift_library(
    name = "nnc_coreml",
    srcs = [
        "CoreMLConversion.swift",
    ],
    module_name = "NNCCoreMLConversion",
    visibility = ["//visibility:public"],
    deps = [
        ":nnc",
    ],
)
