load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library", "swift_interop_hint")

cc_library(
    name = "C_zlib",
    hdrs = ["C_zlib/shim.h"],
    defines = ["_GNU_SOURCE"],
    linkopts = ["-lz"],
    tags = ["swift_module=C_zlib"],
    aspect_hints = [":C_zlib_swift_interop"],
)

swift_interop_hint(
    name = "C_zlib_swift_interop",
    module_name = "C_zlib",
)

cc_library(
    name = "C_ccv",
    hdrs = ["C_ccv/shim.h"],
    aspect_hints = [":C_ccv_swift_interop"],
    deps = [
        "@ccv//lib:ccv",
    ]
)

swift_interop_hint(
    name = "C_ccv_swift_interop",
    module_name = "C_ccv",
)

cc_library(
    name = "C_nnc",
    hdrs = ["C_nnc/shim.h"],
    aspect_hints = [":C_nnc_swift_interop"],
    deps = [
        "@ccv//lib:nnc",
    ]
)

swift_interop_hint(
    name = "C_nnc_swift_interop",
    module_name = "C_nnc",
)

cc_library(
    name = "C_sqlite3",
    hdrs = ["C_sqlite3/shim.h"],
    aspect_hints = [":C_sqlite3_swift_interop"],
    deps = [
        "@ccv//lib:ccv",
    ]
)

swift_interop_hint(
    name = "C_sqlite3_swift_interop",
    module_name = "SQLite3",
)

swift_library(
    name = "nnc",
    srcs = [
        "AnyModel.swift",
        "AutoGrad.swift",
        "DataFrame.swift",
        "DataFrameAddons.swift",
        "DataFrameCore.swift",
        "DynamicGraph.swift",
        "Functional.swift",
        "FunctionalAddons.swift",
        "GradScaler.swift",
        "Group.swift",
        "Hint.swift",
        "Loss.swift",
        "Model.swift",
        "ModelAddons.swift",
        "ModelBuilder.swift",
        "ModelCore.swift",
        "ModelIOAddons.swift",
        "Operators.swift",
        "Optimizer.swift",
        "OptimizerAddons.swift",
        "Store.swift",
        "StreamContext.swift",
        "Tensor.swift",
        "TensorGroup.swift",
        "Wrapped.swift",
    ],
    module_name = "NNC",
    visibility = ["//visibility:public"],
    deps = [
        ":C_zlib",
        ":C_ccv",
        ":C_nnc",
        ":C_sqlite3",
        "@fpzip",
    ],
)

swift_library(
    name = "nnc_python",
    srcs = [
        "PythonConversion.swift",
    ],
    module_name = "NNCPythonConversion",
    visibility = ["//visibility:public"],
    deps = [
        ":nnc",
        "@PythonKit",
    ],
)

swift_library(
    name = "nnc_mujoco",
    srcs = [
        "MuJoCoConversion.swift",
    ],
    module_name = "NNCMuJoCoConversion",
    visibility = ["//visibility:public"],
    deps = [
        ":nnc",
        "@swift-mujoco",
    ],
)

swift_library(
    name = "nnc_coreml",
    srcs = [
        "CoreMLConversion.swift",
    ],
    module_name = "NNCCoreMLConversion",
    visibility = ["//visibility:public"],
    deps = [
        ":nnc",
    ],
)
