load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "tensorboard",
    srcs = glob(["**/*.swift"]),
    module_name = "TensorBoard",
    visibility = ["//visibility:public"],
    deps = [
        "//nnc",
        "@SwiftProtobuf",
        "@SwiftSystem//:SystemPackage",
        "@ccv//lib:ccv",
    ],
)
