load("@build_bazel_rules_swift//swift:swift.bzl", "swift_test")

swift_test(
	name = "nnc",
	srcs = [
		"dataframe.swift",
		"graph.swift",
		"loss.swift",
		"main.swift",
		"model.swift",
		"optimizer.swift",
		"store.swift"
	],
	deps = [
		"//nnc:nnc"
	],
	data = [
		"scaled_data.csv",
		"some_variables.db"
	]
)

swift_test(
	name = "nnc_python",
	srcs = [
		"python/numpy.swift",
		"python/main.swift"
	],
	deps = [
		"//nnc:nnc_python"
	]
)
